# spindrel

./: .dockerignore  .env.example  .gitignore  404.html  AGENTS.md  ANDROID_CLIENT_PLAN.MD  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  DOCKER_SANDBOX_PLAN.md  Dockerfile  Dockerfile.test  Dockerfile.workspace  LICENSE  MEMORY_PLAN.MD  OUTLINE.MD  PLAN.md  PRODUCT.md  README.md  SECURITY.md  SLACK_FILE_AND_IMAGE_INTEGRATION.MD  SLACK_INTEGRATION.MD  TASKS_CALLBACK.MD  TOOL_RAG_PLAN.md  TTS_FeatureSummary.md  alembic.ini  config-state.json  docker-compose.yml  harnesses.yaml  index.html  llms.txt  mcp.example.yaml  mcp.yaml  mkdocs.yml  project-factory-smoke.txt  pyproject.toml  setup.sh  (+5 more)
.agents/: manifest.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.spindrel/: WORKFLOW.md  project-runbook.md
PLANS/: 2026-03-23_INTEGRATION_BLEED_CLEANUP.md  2026-03-24_USER_AUTH.md  ATTACHMENT_RETENTION.md  BACKUP_SYSTEM.md  DELEGATE_EXEC.md  EXPO_CLIENT_V2.md  EXPO_WEB_CLIENT.md  GITHUB_INTEGRATION.md  HEARTBEAT_QUIET_HOURS.md  INGESTION_PIPELINE.md  LOOP_REFACTOR.md  MEDIA_SERVER.md  MESSAGE_HISTORY_COMPRESSION.md  MODEL_ELEVATION.md  README.md  SEARCH_HISTORY.md  TESTING_PLAN.md  THOTH_CLI.md  TODOS.md  TODOS_archived_20260322.md
Plans/: 01_tool_group_selection_ui.md  02_channel_tool_skill_overrides.md
android-client/: .gitignore  app.config.js  app.json  metro.config.js  package-lock.json  package.json
app/: config.py  dependencies.py  main.py
backup/: index.html
bots/: brief_bot.yaml  default.yaml  dev_bot.yaml  slack_bot.yaml
client/: pyproject.toml
client/agent_client/: audio.py  cli.py  client.py  config.py  state.py
client/agent_client/cli/: __init__.py  actions.py  commands.py  display.py  events.py  main.py  streaming.py  tools.py  voice.py
client/tests/: test_display.py  test_events.py
data/: elevation_log.jsonl
docker-deployment/: index.html
dockerfiles/: README.md  agent-python  git-credential-github-env.sh
docs/: BACKUP.md  MEDIA.md  architecture-decisions.md  architecture.md  backup.md  completed-tracks.md  deepening-log.md  delegation.md  docker-deployment.md  e2e-testing-roadmap.md  fix-log.md  harness.md  how-discovery-works.md  inbox.md  index.md  integration-depth-playbook.md  launch-checklist.md  loose-ends.md  migration.md  open-issues.md  project-runs-kanban-mock.html  roadmap.md  scope-matrix.md  setup.md  slack.md  verify.md  widget-authoring-gaps.md  widget-authoring.md  widget-templates.md
hub/: index.html  serve.py
integrations/: __init__.py  _register.py  base.py  discovery.py  index.html  issues.md  manifest_setup.py  sdk.py  slash_command_client.py  tool_output.py  utils.py
migration/: index.html
migrations/: env.py
project-notes/: Architecture Decisions.md  Architecture.md  Completed Tracks.md  E2E Testing Roadmap.md  How Discovery Works.md  Integration Depth Playbook.md  Plan - Rich Tool Rendering.md  README.md  Roadmap.md  Test Audit - Core Gaps.md  Test Audit - Coverage Gaps.md  Test Audit - Deep Review.md  Test Audit - Inventory.md  Test Audit - Mock Session Refactor.md  Track - Automations.md  Track - Chat State Rehydration.md  Track - Code Quality.md  Track - Declarative Integrations.md  Track - Docs Refresh.md  Track - Experiments.md  Track - Google Workspace.md  Track - Harness SDK.md  Track - Indexing & Search.md  Track - Integration Contract.md  Track - Integration DX.md  Track - Integration Delivery.md  Track - Integration Rich Results.md  Track - Local Machine Control.md  Track - Mission Control Vision.md  Track - Notifications.md  Track - PWA & Push.md  Track - Projects.md  Track - Provider Refactor.md  Track - Quickstart Video.md  Track - Security.md  Track - Skill Simplification.md  Track - Slack Depth.md  Track - Spatial Canvas.md  Track - Streaming Architecture.md  Track - Task Sub-Sessions.md  (+11 more)
prompts/: base.md  prompt_generation_guide.md  skill-review.md
scripts/: agent_e2e_dev.py  backfill_pin_source_stamps.py  backup.sh  dev-android.sh  dev-client.sh  dev-server.sh  dump_openapi.py  e2e_flakiness.py  entrypoint.sh  generate-api-types.sh  generate_vapid_keys.py  harness_parity_junit_skips.py  harness_parity_loop_iteration.py  install-service.sh  list_integration_processes.py  release.sh  restore.sh  run_e2e_live.sh  run_e2e_scheduled.sh  run_harness_parity_live.sh  run_harness_parity_local.sh  run_harness_parity_local_batch.sh  run_spindrel_plan_live.sh  setup-e2e-instance.sh  setup.py  spindrel  spindrel_live_config_audit.py  thoth
search/: search_index.json
setup/: index.html
(+4269 files in other folders)
