[project]
name = "spindrel"
version = "0.1.0"
description = "Self-hosted AI agent server with persistent channels, composable expertise, and a pluggable integration framework"
license = {text = "AGPL-3.0"}
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "psycopg2-binary",
    "alembic",
    "pydantic-settings",
    "httpx",
    "openai",
    "pyyaml",
    "pgvector",
    "playwright",
    "faster-whisper",
    "numpy",
    "slack-bolt",
    "aiohttp",
    "jinja2>=3.1.6",
    "python-multipart",
    "watchfiles",
    "pathspec",
    "pyjwt",
    "bcrypt",
    "cryptography",
    "tree-sitter>=0.23",
    "tree-sitter-typescript",
    "tree-sitter-javascript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "websockets",
    "fastembed",
    "ddgs",
    "anthropic>=0.45.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "aiosqlite",
]
setup = [
    "questionary",
    "pyyaml",
]
docs = [
    "mkdocs-material",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "integrations"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
